[package]
name = "Tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri-dialog = "0.1.1"
clap = { version = "4.4.6", features = ["derive"] }
druid = {version= "0.8.3", features = ["image"]  }
image = "0.24.7"
druid-shell = "0.8.3"
num-traits = "0.2.17"
