[package]
name = "screen-crab-tools"
description = "A companion image manipulation app for Screen Crab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri-dialog = "0.1.1"
clap = { version = "4.4.6", features = ["derive"] }
druid = {version= "0.8.3", features = ["image"]  }
image = "0.24.7"
num-traits = "0.2.17"
kurbo = "0.10.4"
cargo-bundle = "0.6.0"
notify-rust = "4.10.0"
core-graphics = "0.23.1"
druid-shell = "0.8.3"

[package.metadata.bundle]
name = "Screen Crab Tools"
identifier = "com.screencrab.tools"
icon = ["icons/Square*.png"]
version = "0.1.0"
category = "Utility"
short_description = "A companion image manipulation application for Screen Crab"
long_description = """
An application that allows to edit a captured image via Screen Crab
"""
osx_minimum_system_version = "10.11"

